优化文件加载路径写法